@@ -8,6 +8,18 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<name>SampleWebApp Calculator</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+	<sonar.sources>src/main</sonar.sources>
+	<sonar.tests>src/test</sonar.tests>
+	<!-- Below property indicates the pattern of the test suite -->
+	<runSuite>**/*Suite.class</runSuite>
+	<!-- Sonar-JaCoCo properties -->
+	<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+	<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+	<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+	<sonar.language>java</sonar.language>
+	 <argLine>-XX:MaxPermSize=512m</argLine>
+</properties>
 	 
 	<dependencies>
 		<dependency>
@@ -47,12 +59,9 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>2.18.1</version>
-    <configuration>
-      <argLine>${surefireArgLine}</argLine>
-      <includes>
-        <include>**/ut/**</include>
-      </includes>
-    </configuration>
+   <configuration>
+    <argLine>-server -ea -XX:MaxPermSize=256m -Xmx4g -XX:-UseSplitVerifier ${argLine}</argLine>
+  </configuration>
   </plugin>
   <plugin>
     <groupId>org.codehaus.mojo</groupId>
@@ -110,9 +119,9 @@
     <artifactId>jacoco-maven-plugin</artifactId>
     <version>0.7.6.201602180812</version>
     <configuration>
-      <skip>${maven.test.skip}</skip>
-      <output>file</output>
-      <append>true</append>
+      <includes>
+      <include>**/src/main/java</include>
+      </includes>
       <excludes>
         <exclude>**/config/*</exclude>
         <exclude>**/dialect/*</exclude>
@@ -127,7 +136,7 @@
         </goals>
         <configuration>
           <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-          <propertyName>surefireArgLine</propertyName>
+          <propertyName>argLine</propertyName>
         </configuration>
       </execution>
       <execution>
